--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,42 +19,14 @@ h1 {
 	opacity: 0.9;
 }
 
-.snakCanvas {
-	background: #009999;
-	color: white;
-	font-family: serif;
-	font-size: 24px;
-	text-align: center;
-	padding: 10px;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-	border-radius: 10px;
-	position: absolute;
-	top: 150px;
-	right: 50%;
-	margin-right: -240px;
-	width: 480px;
-	height: 320px;
-	overflow: hidden;
-	opacity: 0.9;
-}
 
-.fmsg {
-	background: #009999;
-	color: white;
-	font-family: serif;
-	font-size: 24px;
-	text-align: center;
+.canvas {
+	background: #f09999;
 	padding: 10px;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
-	position: absolute;
+	position: relative;
 	top: 150px;
-	right: 50%;
-	margin-right: -240px;
-	width: 480px;
-	height: 320px;
-	overflow: hidden;
-	opacity: 0.9;
+    width: auto;
 }
